Fixed UI issues
Added:
- error box
- spinning wheel;
- styling; and
- echo test endpoint.

--- a/ui/app/src/App.css
+++ b/ui/app/src/App.css
@@ -37,8 +37,21 @@
   }
 }
 
-.footer-copyright {
+.footer {
+  margin-top: 20px;
   margin-left: 10px;
   font-size: 12px;
   color: #720707;
+}
+
+.ask-btn {
+  margin-top: 20px;
+  font-size: 16px;
+  color: #e7ff8d;
+}
+
+.error-box {
+  margin-top: 20px;
+  margin-left: 100px;
+  width: 600px;
 }
