--- a/ui/app/src/App.css
+++ b/ui/app/src/App.css
@@ -1,20 +1,10 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background: #626161;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #626161;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -28,13 +18,12 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.font-monospace {
+  color: #e0b769;
+}
+
+.title {
+  color: #1a0c0c;
 }
 
 .footer {
