--- a/ui/app/src/App.css
+++ b/ui/app/src/App.css
@@ -1,68 +1,98 @@
-.App {
-  text-align: left;
-  background: #626161;
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background: transparent;
 }
 
+body::before {
+    content: "";
+    position: fixed; /* Changed from absolute to fixed */
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    background: url(../public/background.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.App {
+    text-align: left;
+    background: transparent;
+    min-height: 100vh; /* Ensure App takes up full browser height */
+}
+
+
 .App-header {
-  background-color: #626161;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: transparent;
+    min-height: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 .font-monospace {
-  color: #e0b769;
+    color: #0a0100;
 }
 
-.title {
-  color: #1a0c0c;
+.title, h6 {
+    color: #e3d3ea;
 }
 
 .footer {
-  margin-top: 20px;
-  margin-left: 10px;
-  font-size: 12px;
-  color: #720707;
+    margin-top: 20px;
+    margin-left: 10px;
+    font-size: 12px;
+    color: #e3d3ea;
 }
 
 .ask-btn {
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  width: 200px;
-  font-size: 16px;
-  color: #e7ff8d;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 200px;
+    font-size: 16px;
 }
 
 .conversation-btn {
-  text-align: center;
-  margin-top: 25px;
-  font-size: 16px;
+    text-align: center;
+    margin-top: 25px;
+    font-size: 16px;
 }
 
-.stop-btn {
-  margin-top: 20px;
-  font-size: 16px;
-  background: #720707;
-  color: #e7ff8d;
+.stop-btn, .stop-btn:focus {
+    margin-top: 20px;
+    font-size: 16px;
+    background: #e3d3ea;
+    color: #2e2e96;
 }
 
 .error-box {
-  margin-top: 20px;
-  margin-left: 100px;
-  width: 600px;
+    margin-top: 20px;
+    margin-left: 100px;
+    width: 70%;
 }
 
 .bold-label {
-  font-size: 0.8em;
-  font-weight: bold;
+    font-size: 0.8em;
+    font-weight: bold;
+    color: whitesmoke;
 }
 
+textarea.prompt-box, textarea.prompt-box:focus {
+    color: #eeeeea;
+    background-color: #2e2e96;
+}
